# MinLang

./: CMakeLists.txt  Lexer.cpp  Lexer.hpp  MinLang.hpp  Token.hpp  main.cpp  vcpkg.json
src/: DataTypes.hpp  Expression.cpp  Expression.hpp  ExpressionVisitor.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  LexerError.hpp  Parser.cpp  Parser.hpp  ParserError.hpp  Statement.cpp  Statement.hpp  StatementVisitor.hpp  Token.hpp  TypeChecker.cpp  TypeChecker.hpp  TypeError.hpp  main.cpp
src/magic_enum/: magic_enum.hpp
tests/: CMakeLists.txt  Interpreter.test.cpp  Lexer.test.cpp  Parser.test.cpp  TypeChecker.test.cpp
